# ugengen

./: CMakeLists.txt  MyFirstUgen.cpp  README.md  UGEN_NAME.cpp
Classes/: MyFirstUgen.sc  UGEN_NAME.sc
